--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,11 @@
 .page {
   background-color: #fcf5e5;
   font-family: Poppins, Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+}
+
+.page__section {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
 }
