--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   justify-content: center;
-  padding: 60px 60px;
+  padding: 60px 0;
 }
 
 .footer__title {
@@ -9,4 +9,5 @@
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 16px;
+  line-height: 100%;
 }
