--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,7 +8,7 @@
   height: 190px;
   width: 190px;
   margin-right: 20px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -17,6 +17,7 @@
 }
 
 .profile__name {
+  color: rgba(33, 33, 33, 1);
   margin: 0 0 12px;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
@@ -60,7 +61,8 @@
   padding: 0;
 }
 .profile__edit-but:hover {
-  color: rgba(33, 33, 33, 1);
+  opacity: 70%;
+  cursor: pointer;
 }
 .profile__edit-but:focus {
   outline: none;
@@ -75,17 +77,18 @@
   margin-top: auto;
   background-color: #212121;
   color: rgba(252, 245, 229, 1);
-
+  border: none;
   border-radius: 10px;
   gap: 8px;
   display: flex;
   align-items: center;
   padding: 18px 32px 18px 32px;
-  height: 12px;
+  height: 52px;
 }
 
 .profile__add-but:hover {
   background-color: rgba(33, 33, 33, 0.8);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 630px) {
