--- a/blocks/card.css
+++ b/blocks/card.css
@@ -26,6 +26,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
+  margin: 0;
 }
 .card__like-button {
   background-color: #fcf5e5;
