--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,7 +22,7 @@
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 32px;
-  letter-spacing: 0%;
+  line-height: 1;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -34,7 +34,7 @@
 .profile__description {
   margin: 0;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
-  width: 97px;
+  line-height: 1;
   font-weight: 500;
   font-size: 16px;
   color: rgba(33, 33, 33, 0.7);
@@ -61,7 +61,7 @@
   padding: 0;
 }
 .profile__edit-but:hover {
-  opacity: 70%;
+  opacity: 100%;
   cursor: pointer;
 }
 .profile__edit-but:focus {
@@ -96,7 +96,7 @@
     max-width: 288px;
     flex-direction: column;
     align-items: center;
-    padding: 20px 16px;
+    padding: 20px 0;
   }
   .profile__avi {
     margin-right: 0;
@@ -106,21 +106,18 @@
 
   .profile__column {
     align-items: center;
+    text-align: center;
   }
 
   .profile__name {
     padding-top: 12px;
     margin: 0;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-weight: 500;
     font-size: 20px;
     max-width: 288px;
   }
 
   .profile__description {
     padding-top: 6px;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-weight: 500;
     font-size: 16px;
     max-width: 288px;
   }
